# cfdi

./: .gitignore  Pipfile  pyproject.toml  setup.py  template.yaml
.github/workflows/: pipeline.yaml
cfdi/: __init__.py  emisor.py  receptor.py  utils.py
cfdi/complemento/: __init__.py
cfdi/concepto/: __init__.py
cfdi/concepto/impuesto/: __init__.py
cfdi/impuesto/: __init__.py  traslado.py
src/cfdi/: __init__.py  emisor.py  receptor.py  utils.py
src/cfdi/complemento/: __init__.py  timbre_fiscal_digital.py
src/cfdi/concepto/: __init__.py
src/cfdi/concepto/impuesto/: __init__.py  traslado.py
src/cfdi/impuesto/: __init__.py  traslado.py
tests/: invoice.xml  test_serializer.py
