[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cfdi"
version = "0.0.1"
authors = [
  { name="Isaac Sánchez", email="isaacsancheza@outlook.com" },
]
description = "A simple CFDI package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["lxml"]

[project.urls]
"Homepage" = "https://github.com/isaacsancheza/cfdi"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
